implement test and quit proto